kustomize/overlays/homecloud/apps/opencloud/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  namespace: opencloud
  name: opencloud-app-ingress
  labels:
    app: opencloud-app
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"

spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: opencloud-app
      port:
        number: 443
  tls:
    - hosts:
        - opencloud
